# refinance-contract

./: .gitignore  Cargo.toml  README.md  REFINANCE.md
contracts/baf-crowdfunding-contract/src/: TIPS.md  contract.rs  lib.rs
contracts/baf-crowdfunding-contract/src/events/: mod.rs  proof.rs  refund.rs
contracts/baf-crowdfunding-contract/src/methods/: add_campaign.rs  add_proof.rs  get_campaign.rs  get_proof.rs  log_proof.rs  milestone.rs  mod.rs  refund.rs  withdraw_milestone.rs
contracts/baf-crowdfunding-contract/src/storage/: admin.rs  campaign.rs  milestone.rs  mod.rs  token.rs
contracts/baf-crowdfunding-contract/test_snapshots/test/: test_campaign_storage.1.json  test_milestone_creation_logic.1.json  (+4 more)
contracts/baf-crowdfunding-contract/tests/: attestation_test.rs
contracts/crowdfunding-contract/: Cargo.toml
contracts/crowdfunding-contract/src/: contract.rs  lib.rs
contracts/crowdfunding-contract/src/events/: contribute.rs  milestone.rs  proof.rs
contracts/crowdfunding-contract/src/methods/: contribute.rs  get_proof.rs  initialize.rs  milestone.rs  mod.rs  proof_milestone.rs  withdraw.rs
contracts/crowdfunding-contract/src/storage/: contribution.rs  proof.rs
contracts/crowdfunding-contract/src/storage/structs/: campaign.rs  mod.rs
contracts/crowdfunding-contract/src/storage/types/: error.rs  storage.rs
contracts/crowdfunding-contract/tests/: attestation_test.rs  integration_test.rs
contracts/milestone-nft-contract/: Cargo.toml  README.md
contracts/nft-contract/: Cargo.toml  README.md
contracts/nft-contract/src/: lib.rs
docs/: TASKS.md
(+7 files in other folders)
